ENG-2187 publish endpoint
